fix spacing after faq

--- a/client/assets/scss/splash.scss
+++ b/client/assets/scss/splash.scss
@@ -179,7 +179,7 @@ nav.navbar.navbar-inverse {
 #faq {
   text-align: center;
   padding-top: 10vh;
-  padding-bottom: 20vh;
+  padding-bottom: 0;
 
   .title {
     margin-bottom: 20px;
